<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:orientation="vertical"
    android:paddingHorizontal="48dp"
    android:paddingVertical="64dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/create_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto"
        android:text="@string/create_class"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="72dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="32dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/light_green"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"/>
    </LinearLayout>

    <TextView
        android:id="@+id/choose_class_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/choose_subject"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="72dp" />

    <RadioGroup
        android:id="@+id/class_subject_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="16dp">

        <RadioButton
            android:id="@+id/radio_button_portuguese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portuguese"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:buttonTint="@color/light_green"/>

        <RadioButton
            android:id="@+id/radio_button_math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:buttonTint="@color/light_green"/>

        <RadioButton
            android:id="@+id/radio_button_biology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biology"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:buttonTint="@color/light_green"/>

        <RadioButton
            android:id="@+id/radio_button_physics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physics"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:buttonTint="@color/light_green"/>
    </RadioGroup>

    <Button
        android:id="@+id/enter_class_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/ice_blue"
        android:text="@string/create_class_button"
        android:textColor="@color/dark_green"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>