<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mint"
        android:orientation="vertical"
        android:paddingHorizontal="64dp"
        android:paddingVertical="64dp"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/login_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/do_login"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="144dp" />

        <EditText
            android:id="@+id/login_username_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="clip_horizontal"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/roboto"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="144dp" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="clip_horizontal"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/roboto"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:text="@string/login"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="32dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/light_green"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_weight="1"
                android:textColor="@color/light_green"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/light_green"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>
        </LinearLayout>

        <TextView
            android:id="@+id/register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/do_register"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/register_username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="144dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="clip_horizontal"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/roboto"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="144dp" />

        <EditText
            android:id="@+id/register_password_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="clip_horizontal"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/roboto"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_i_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/i_am"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="72dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_student"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/student"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:buttonTint="@color/light_green"/>

            <RadioButton
                android:id="@+id/radio_button_teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teacher"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:buttonTint="@color/light_green"/>
        </RadioGroup>

        <TextView
            android:id="@+id/text_view_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/level"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="72dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_education1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education1"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:buttonTint="@color/light_green"/>

            <RadioButton
                android:id="@+id/radio_button_education2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education2"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:buttonTint="@color/light_green"/>

            <RadioButton
                android:id="@+id/radio_button_education3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education3"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:buttonTint="@color/light_green"/>
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:text="@string/register"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            android:layout_marginVertical="16dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
