<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="64dp">
        <TextView
            android:id="@+id/login_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/portuguese"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="72dp" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/portuguese"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="32dp"
            android:contentDescription="@string/portuguese"/>

        <LinearLayout
            android:id="@+id/assunto1_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/subject_toggle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/portuguese_school_subject1"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>

        <!-- ASSUNTO 1 -->
        <LinearLayout
            android:id="@+id/conteudo1_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingVertical="4dp"
            android:paddingHorizontal="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/portuguese_school_content1"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>